--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ body {
 }
 
 .slider__range {
+  
   -webkit-appearance: none;
   width: 100%;
   height: 0.5rem;
@@ -70,6 +71,7 @@ body {
 }
 
 .slider__range:active::-webkit-slider-thumb {
+  cursor:move;
   box-shadow: 0 0 0 12px var(--secondaryActive);
 }
 
